--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -40,17 +40,19 @@
             <img class="contentcard" style="height: 350px; border-radius: 15px;" src="{{ article.image.url }}" alt="">
           </div>
           {% else %}
-          <div class="contentcard d-flex align-items-center justify-content-center"
-            style="background-color: rgb(35, 35, 35); height: 200px; border-radius: 15px;">
+          <div class="contentcard d-flex align-items-center justify-content-center mx-4 mb-3"
+            style="background-color: rgb(35, 35, 35);width: 652px; height: 200px; border-radius: 15px;">
             <p class="non_a text-white" style="font-weight: 200;">이미지가 없습니다.</p>
           </div>
           {% endif %}
-          <a href="{% url 'articles:detail' article.pk article.slug %}" class="non_a">
-            <span class="fs-2 fw-bold">{{article.title}}</span>
-          </a>
-          <!-- username/ create_at -->
-          <p class="mb-0" style="font-weight: 200;">{{ article.user }}</p>
-          <p class="mb-0" style="font-weight: 200;">{{ article.created_at }}</p>
+          <div class="px-4">
+            <a href="{% url 'articles:detail' article.pk article.slug %}" class="non_a">
+              <span class="fs-2 fw-bold">{{article.title}}</span>
+            </a>
+            <!-- username/ create_at -->
+            <p class="mb-0" style="font-weight: 200;">{{ article.user }}</p>
+            <p class="mb-0" style="font-weight: 200;">{{ article.created_at }}</p>
+          </div>
         </div>
       </div>
     </a>
