--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -61,17 +61,20 @@
   </section>
   <aside class="box" style="overflow-y: scroll; height: calc(100vh - 60px);">
     {% for article_hit in articles_hits %}
-    <div class="mt-3" style=" width: 100%;">
-      <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
-        <div class="card m-2 col-lg-8" style="height: 150px;">
-          <img style="height: 100%;" src="{{ article_hit.image }}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">{{article_hit.title}}
-            </p>
+    <a class="non_a" href="{% url 'articles:detail' article_hit.pk article_hit.slug %}">
+      <div class="mt-3" style=" width: 100%;">
+        <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
+          <div class="card m-2 p-0 col-lg-8" style="height: 150px; border: 0px">
+            <img class="contentcard" style="height: 100%; border-radius: 15px;" src="{{ article_hit.image.url }}"
+              class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text" style="font-weight: 700;">{{article_hit.title}}
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </a>
     {% endfor %}
   </aside>
 </div>
