--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -62,19 +62,19 @@
   <aside class="box" style="overflow-y: scroll; height: calc(100vh - 60px);">
     {% for article_hit in articles_hits %}
     <a class="non_a" href="{% url 'articles:detail' article_hit.pk article_hit.slug %}">
-      <div class="mt-3" style=" width: 100%;">
-        <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
+    <div class="mt-3" style=" width: 100%;">
+      <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
           <div class="card m-2 p-0 col-lg-8" style="height: 150px; border: 0px">
             <img class="contentcard" style="height: 100%; border-radius: 15px;"
-              src="https://blog.kakaocdn.net/dn/rxanS/btqEsEjUpAW/DghnkWtTGo7mVEiSo2yiq0/img.jpg" class="card-img-top"
+              src="{{ article_hit.image.url }}" class="card-img-top"
               alt="...">
-            <div class="card-body">
+          <div class="card-body">
               <p class="txt_line card-text" style="font-weight: 700;">{{article_hit.title}}
-              </p>
-            </div>
+            </p>
           </div>
         </div>
       </div>
+    </div>
     </a>
     {% endfor %}
   </aside>
