--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -65,7 +65,7 @@
     <a class="non_a" href="{% url 'articles:detail' article_hit.pk article_hit.slug %}">
       <div class="user-wrap mt-5" style="width: 100%; height: 250px;">
         <div class="user-text px-4 mt-0">
-          {% if article.image %}
+          {% if article_hit.image %}
           <!-- title -->
           <div class="user-image mx-4 py-3">
             <img class="contentcard" style="height: 250px; width:100%; border-radius: 15px; object-fit: cover;"
