--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,9 @@
         </div>
         <!-- <div class="nav_left"> -->
         <div class="nav_main">
-          <a class="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'products:detail' 1 %}">
+          <a class="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'products:index' %}">
             <span class=" nmc">
-              <b>상품후기</b>
+              <b>상품목록</b>
             </span>
           </a>
         </div>
@@ -127,9 +127,9 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item" style="margin-top: 15px;">
             <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;"
-              href="{% url 'products:detail' 1 %}">
+              href="{% url 'products:index' %}">
               <span class="nmc">
-                <b>상품후기</b>
+                <b>상품목록</b>
               </span>
             </a>
           </li>
