--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <body style="background-color: rgb(249, 249, 249);">
-  <aside class="container d-flex box mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
+  <aside class="container d-flex box mt-3">
     <div>
       <h2 class="mb-5 mx-3" style="font-size: 14px; color: #8b95a1">상품목록</h2>
     </div>
